--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,12 +33,18 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
+  flutter_svg: ^2.0.9
   freezed: ^3.2.0
   freezed_annotation: ^3.1.0
-  flutter_svg: ^2.0.9
   google_fonts: ^6.3.0
   http: ^1.5.0
   intl: ^0.20.2
+  shared_preferences: ^2.5.3
+  camera: ^0.11.0
+  google_mlkit_commons: ^0.7.1
+  google_mlkit_face_detection: ^0.10.1
+  image: ^4.1.7
+  tflite_flutter: ^0.10.4
 
 dev_dependencies:
   build_runner: ^2.4.6
@@ -67,6 +73,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
+    - assets/
     - assets/images/
     - assets/icons/
     - assets/icons/menu/
